# DistributedComputing

./: .gitattributes  .gitignore  .indent.pro  CMakeLists.txt  README.md  testfile.c
in/: TestConfig.h.in
src/: CMakeLists.txt
src/BasicBlockTest/: CMakeLists.txt  module1  module1.cxx
src/GlobalVariable/: CMakeLists.txt  GlobalVariable.cxx
src/JITtest/: CMakeLists.txt  jit.cxx
src/libs/GitSHA1/: CMakeLists.txt  GitSHA1.h
src/test/: CMakeLists.txt  Test  test.cxx
